ore styles, fixed label bleed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,9 +28,11 @@ h1, h2, h3 {
 }
 
 .parent input[type="checkbox"] {
-    cursor: crosshair;
+    cursor: pointer;
     opacity: 0;
     position: absolute;
+    height: 4rem;
+    width: 4rem;
 }
 
 .parent label::before {
@@ -39,19 +41,20 @@ h1, h2, h3 {
     height: 3em;
     border-radius: .3em;
     border: 10px #aca3a3;
-    margin: 5px;
+    margin: .5rem;
     background: radial-gradient(#ada5a5, #9198e5);
     box-shadow: 0 0 10px rgb(117, 116, 116)
 }
 
 .parent label:hover::before,
 .parent input[type="checkbox"]:hover + label::before {
-    background: radial-gradient(rgb(226, 213, 139), #9198e5);
+    background: radial-gradient(rgba(226, 213, 139, 0.822), #9198e5a9);
     box-shadow: 0 0 13px rgb(224, 218, 153)
 }
 
 .parent input[type='checkbox']:checked + label::before {
-    background: radial-gradient(#ada5a5, #565a88, rgb(92, 33, 33)); 
+    background: radial-gradient( rgb(243, 241, 148),#a1a7eb);
+    box-shadow: 0 0 20px rgb(213, 226, 139); 
 }
 
 .row {
@@ -87,10 +90,99 @@ h1, h2, h3 {
     background-color: red;
 }
 
-.play {
-    height: 3rem;
-    width: 7rem;
-    color:wheat;
+/* .button.play {
+    height: 5rem;
+    width: 5rem;
+    background-image: radial-gradient(gray, rgb(65, 62, 62));
+    border-radius: 100%;
+    border: 1px red;
+    box-shadow: 0 0 40px darkred;
+  } */
+  .play {
+    width: 100px;
+    height: 100px;
+    background: radial-gradient( rgba(155, 23, 23, 0.8) 60%, rgb(240, 240, 203) 62%);
     border-radius: 50%;
-    background-image: radial-gradient(rgb(122, 68, 68), black);
-}
+    position: relative;
+    display: block;
+    margin: 100px auto;
+    box-shadow: 0px 0px 25px 3px rgba(255, 0, 13, 0.8);
+  }
+  
+  /* triangle */
+  .play::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translateX(-40%) translateY(-50%);
+    transform: translateX(-40%) translateY(-50%);
+    transform-origin: center center;
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 25px solid rgb(240, 240, 203);
+    z-index: 100;
+    -webkit-transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  
+  /* pulse wave */
+  .play:before {
+    content: "";
+    position: absolute;
+    width: 150%;
+    height: 150%;
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+    -webkit-animation: pulsate1 2s;
+    animation: pulsate1 2s;
+    -webkit-animation-direction: backwards;
+    animation-direction: backwards;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: steps;
+    animation-timing-function: steps;
+    opacity: 1;
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, .75);
+    top: -30%;
+    left: -30%;
+    background: rgba(198, 16, 0, 0);
+  }
+  
+  @-webkit-keyframes pulsate1 {
+    0% {
+      -webkit-transform: scale(.1);
+      transform: scale(.1);
+      opacity: 1;
+      box-shadow: inset 0px 0px 25px 3px rgba(255, 255, 255, 0.75), 0px 0px 25px 10px rgba(255, 255, 255, 0.75);
+    }
+    100% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      opacity: 0;
+      box-shadow: none;
+  
+    }
+  }
+  
+  @keyframes pulsate1 {
+    0% {
+      -webkit-transform: scale(0.6);
+      transform: scale(0.6);
+      opacity: 1;
+      box-shadow: inset 0px 0px 25px 3px rgba(255, 255, 255, 0.75), 0px 0px 25px 10px rgba(255, 255, 255, 0.75);
+    }
+    50% {
+        opacity: 50%;
+    }
+    100% {
+      -webkit-transform: scale(1, 1);
+      transform: scale(1);
+      opacity: 0;
+      box-shadow: none;
+  
+    }
+  }
